--- a/note/20240307.md
+++ b/note/20240307.md
@@ -35,6 +35,13 @@
         2. 루트노드, 내부노드 리프노드로 구성된 트리자료구조이다.
         3. 리프노드가 모두 같은 레벨에 존재하는 균형 트리다.
     - 
+    
+- 데이터베이스 프로그래밍의 개념
+	- 데이터베이스 프로그래밍방법
+		1. SQL 전용언어를 사용하는방법
+		2. 일반 프로그래밍언어에 SQL을 삽입하여 사용하는방법
+		3. 웹 프로그래밍 언어에 SQL을 삽입하여 사용하는 방법
+		4. 4GL
 
 - etc..
     - 
