--- a/note/20240307.md
+++ b/note/20240307.md
@@ -42,6 +42,10 @@
 		2. 일반 프로그래밍언어에 SQL을 삽입하여 사용하는방법
 		3. 웹 프로그래밍 언어에 SQL을 삽입하여 사용하는 방법
 		4. 4GL
+		
+- MySQL 명령 라인에서 데이터베이스를 이용하지 않는 프로시저 Dorepeat을 정의하고 실행해보기
+- 커서를 사용하는 프로시저 (현재 실행중인 위치를 가르킨다?) 
+- 트리거는 너무 많은 내용을 넣으면 협업이 힘들수 있다.
 
 - etc..
     - 
