--- a/note/20240307.md
+++ b/note/20240307.md
@@ -46,7 +46,16 @@
 - MySQL 명령 라인에서 데이터베이스를 이용하지 않는 프로시저 Dorepeat을 정의하고 실행해보기
 - 커서를 사용하는 프로시저 (현재 실행중인 위치를 가르킨다?) 
 - 트리거는 너무 많은 내용을 넣으면 협업이 힘들수 있다.
-
+- 프로시저는 데이터베이스에종속
+- 트리거는 테이블에종속
+- 사용자정의함수 
+- 각각의 변수는 작동방식이 다르다.
+	- 프로시저 작동 (call) 
+	- 사용자정의함수 (select, from)
+	- 트리거?
+	
 - etc..
+	- fnc_interest (언더바를 넣으면 소문자)
+	- fncInterest ()
     - 
     - 
