--- a/note/1111.md
+++ b/note/1111.md
@@ -16,6 +16,20 @@
 
 - 
 
-- etc..
+- etc
     - 
     - 
+
+set global validate_password.policy=LOW;
+create user 'madang'@'%' identified by 'madang';
+grant all privileges on *.* to 'madang'@'%';
+flush privileges;
+sudo nano /etc/mysql/mysql.conf.d/mysqld.cnf
+sudo ufw allow mysql
+
+python -V
+python3 -V
+
+sudo apt install python3-pip
+pip install pymysql
+
