--- a/note/1111.md
+++ b/note/1111.md
@@ -19,6 +19,13 @@
 - etc
     - 
     - 
+우분투 mysql 설치방법
+https://velog.io/@juhyeon1114/Ubuntul-mysql-%EC%84%A4%EC%B9%98%ED%95%98%EA%B8%B0
+워크벤치
+https://ko.linux-console.net/?p=14987
+
+
+
 
 set global validate_password.policy=LOW;
 create user 'madang'@'%' identified by 'madang';
