--- a/note/20240308.md
+++ b/note/20240308.md
@@ -13,6 +13,32 @@
 		- 기본키가 아닌 속성이 기본키에 바이행적으로 종속 할 떄
 		- 
 
+- 트랜잭션
+	1. dbms에서 데이터를 다루는 논리적인 작업의 단위
+	2. 테이터베이스에서 데이터를 다룰 때 장애가 일어나는 경우 데이터를 복구하는 작업의 단위가 된다.
+	3. 데이터베이스에서 여러 작업이 동시에 같은 데이터를 다룰 때 작업을 서로 분리하는 단위가 된다.
+
+- 트랜잭션의 성질
+	1. 원자성 
+	2. 일관성 
+	4. 지속성  
+
+- 트랜잭션과 DBMS
+	1.
+	2.
+	3.
+	4.
+
+- 락킹
+	1. 동시성 제어
+	2. 갱신손실문제
+	3. ..
+
+- 공유락 ()
+- 베타락 ()
+- 데드락 (교착상태) 데드락이 안생기게 잘해야한다..ㅋㅋ 블루스크린의 이유가 데드락이다..
+- 인터프리터락? 파이썬?
+
 - etc
 	-
 	-
