--- a/note/20240305.md
+++ b/note/20240305.md
@@ -110,7 +110,7 @@
     - int *p;
     - p = nums; (?)
     - 포인터와 배열의 관계
-        1. 배열이름이 식에서 사용되면 첫번째 엘리먼트의 시작주소를 의미한다
+        1. 배열이름이 식에서 사용되면 첫번째 엘리먼트의 시작주소값을 의미한다
         2. 배열은 포인터식으로 포인터는 배열식으로 (반대도 가능)
             - . //한 주소당 4바이트씩 사용한다. (???)
             - . p = p + 1; == ++p;
