--- a/note/20240306.md
+++ b/note/20240306.md
@@ -50,9 +50,9 @@
     - 함수의 인자로 포인터를 쓰는 경우
         1. 호출하는 쪽에있는 변수값을 호출당하는 쪽에서 바꾸어주어야할때 사용한다.
         2. 배열을 인자로 전달할때 첫번째 엘리먼트의 시작 주소와 사이즈를 전달한다.
-        3. 
-        4. 
-        5. 
+        3. 구조체 자료를 인자로 전달할 때, overhead를 줄이기 위해서 포인터를 사용한다.
+        4. 사용자 정의 연산을 인자로 전달할때 함수 포인터를 사용한다.
+        5. 임의의 인자를 전달할때, void* 를 사용한다.
 
 - 함수
     - 함수를 호출하려면 함수룰 선언 또는 정의가 있어야한다.
