--- a/note/20240311.md
+++ b/note/20240311.md
@@ -23,14 +23,20 @@
         		
         		temp-year = t_year;
         		temp-month = t-month;
-        		temp-dqy=tday;
-        		
+        		temp-dqy=tday
+				
+- 문자열(string)	
+	-문자의 배열 
+    - char str [6]= {'h' 'e' 'l' 'l' 'o' '\0'};
+    - char str []= "hello '\0' "; // '\0' 안써도된다.
+        - char str [] = "hello"; (?)
+        - char *str = "hello"; (?)
 
-- 
-    - 
-    - 
-        - 
-        - 
+- 문자열배열
+	- char cities[][20] = {"", "", "", "", "", "", "", "", "", "", "", ""} (이차원배열)
+	- char *cities[] = {"", "", "", "", "", "", "", "", "", "", "", ""} (일차원배열)
+- 상수(integer constant)
+	- 상수는 데이터 영역을 차지하지 않는다.
 
 - 
 
